--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.8",
     "esbuild": "^0.15.12",
     "gray-matter": "^4.0.3",
+    "markdown-it": "^13.0.1",
     "mdx-bundler": "^9.0.1",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.12",
+    "@types/node": "18.11.5",
+    "@types/react": "18.0.23",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1"
+    "tailwindcss": "^3.2.2",
+    "typescript": "4.8.4"
   }
 }
