--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "mapbox-gl": "^2.10.0",
     "markdown-it": "^13.0.1",
     "mdx-bundler": "^9.0.1",
-    "next": "13.2.1",
+    "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
