--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "embla-carousel-react": "^7.0.5",
     "esbuild": "^0.15.12",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.9.0",
     "mapbox-gl": "^2.10.0",
     "markdown-it": "^13.0.1",
     "mdx-bundler": "^9.0.1",
