--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix",
+    "format": "prettier --write .",
+    "fix": "yarn run format && yarn run lint"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^14.1.0",
@@ -32,6 +34,9 @@
     "eslint-config-next": "13.0.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.2",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "prettier": "^2.8.8",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1"
   }
 }
