--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/bundle-analyzer": "^14.1.0",
     "@next/third-parties": "^14.1.0",
     "@tailwindcss/typography": "^0.5.8",
+    "@vercel/analytics": "^1.4.1",
     "embla-carousel-react": "^7.0.5",
     "esbuild": "^0.15.12",
     "gray-matter": "^4.0.3",
@@ -32,11 +33,11 @@
     "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.2",
-    "typescript": "4.8.4",
-    "prettier": "^2.8.8",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1"
+    "eslint-plugin-prettier": "^4.2.1",
+    "postcss": "^8.4.18",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.2.2",
+    "typescript": "4.8.4"
   }
 }
