--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "mapbox-gl": "^2.10.0",
     "markdown-it": "^13.0.1",
     "mdx-bundler": "^10.1.1",
-    "next": "latest",
+    "next": "15.5.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rss": "^1.2.2",
